--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,71 @@
+.header{
+  background-color: white !important;
+  position: relative;
+}
+
+.logoStyle{
+  right: 20px;
+  position: absolute;
+  width: 70px;
+}
+
+.linkStyle{
+  margin-left: 30px;
+}
+
+.right-column-boxes .chip-container {
+  max-height: 80px;
+  overflow-y: auto;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+
+.textBox-style{
+  padding-left: 10px !important;
+  margin: 0px 10px !important;
+  background-color: #C5C5C5 !important;
+  color: #000 !important;
+}
+
+.css-13g8sm6-MuiButtonBase-root-MuiChip-root .MuiChip-deleteIcon{
+  color: rgb(147 147 147) !important;
+}
+
+.searchIcon{
+  margin-right: 20px;
+  font-size: 1.2em;
+  color: gray;
+}
+
+.phoneIcon{
+  margin-right: 30px;
+  font-size: 1.2em;
+  color: gray;
+}
+
+.loginBtn{
+  width: 110px;
+  border-radius: 50px !important;
+  background-color: #29A49A !important;
+  left: 20px !important;
+  position: absolute !important;
+}
+
+.iconParent{
+  position: absolute;
+  left: 13%;
+}
+
+@media (max-width:1030px) {
+  .iconParent{
+    left: 16%;
+  }
+  .linkParent{
+    margin-right: 16% !important;
+  }
+}
+
 .left-column {
   background-color: #fff;
   padding: 16px;
@@ -55,4 +123,10 @@
 
 .paginationStyle{
   margin-top: 20px;
+}
+
+.submitBtn{
+  margin-top: 20px;
+  width: 100%;
+  background-color: #7ba2a0 !important;
 }
